--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/1.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/1.md
@@ -1,8 +1,10 @@
 # Thực hành buổi 1
 
-::: tip 📁 TÀI NGUYÊN
+::: tip 📝 ĐỀ BÀI
 
-[Download tài liệu buổi 1](https://drive.google.com/file/d/1gMBTY130ugzWwn3mHIdXuTe9F_GACYHz/preview)
+<div class="pdfZen">
+  <iframe src="https://drive.google.com/file/d/1gMBTY130ugzWwn3mHIdXuTe9F_GACYHz/preview"></iframe>
+</div>
 :::
 
 ## I.Chuẩn bị 
