--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/2.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/2.md
@@ -1,8 +1,10 @@
 # Thực hành buổi 2
 
-::: tip 📁 TÀI NGUYÊN
+::: tip 📝 ĐỀ BÀI
 
-[Download tài liệu buổi 2](https://drive.google.com/file/d/108G1eui71KWLox5ZOg152FepWrKN7PEd/preview)
+<div class="pdfZen">
+  <iframe src="https://drive.google.com/file/d/108G1eui71KWLox5ZOg152FepWrKN7PEd/preview"></iframe>
+</div>
 :::
 
 ## 1.Chuẩn bị
