--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/3.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/3.md
@@ -1,8 +1,10 @@
 # Thực hành buổi 3
 
-::: tip 📁 TÀI NGUYÊN
+::: tip 📝 ĐỀ BÀI
 
-[Download tài liệu buổi 3](https://drive.google.com/file/d/12LJKW57xrFUzgI1ZWIl5Vvws4arir3me/preview)
+<div class="pdfZen">
+  <iframe src="https://drive.google.com/file/d/12LJKW57xrFUzgI1ZWIl5Vvws4arir3me/preview"></iframe>
+</div>
 :::
 
 ## 1. Bài tập 8
