--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/5.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/5.md
@@ -1,8 +1,10 @@
 # Thực hành buổi 5
 
-::: tip 📁 TÀI NGUYÊN
+::: tip 📝 ĐỀ BÀI
 
-[Download tài liệu buổi 5](https://drive.google.com/file/d/1mPP6ZO6n-F_L1N2NykTZqq-8acGWFAJm/preview)
+<div class="pdfZen">
+  <iframe src="https://drive.google.com/file/d/1mPP6ZO6n-F_L1N2NykTZqq-8acGWFAJm/preview"></iframe>
+</div>
 :::
 
 ::: warning ⚠️ LƯU Ý
