--- a/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/2.md
+++ b/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/2.md
@@ -1,8 +1,10 @@
 # <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/03/17-20-04-53-icons8-manager.png" width="50"> Buổi 2 - Quản lý tài khoản, ổ cứng và tập tin
 
-::: tip 📁 TÀI NGUYÊN
+::: tip 📝 ĐỀ BÀI
 
-[Download file buổi 2](https://drive.google.com/file/d/1sa_m11zI9xBpkq56idn8g09ZhpN4gtE5/preview)
+<div class="pdfZen">
+  <iframe src="https://drive.google.com/file/d/1sa_m11zI9xBpkq56idn8g09ZhpN4gtE5/preview"></iframe>
+</div>
 :::
 
 ## 1. Cài đặt CentOS
