--- a/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/6.md
+++ b/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/6.md
@@ -524,9 +524,9 @@ Vì sử dụng `CentOS` bản không `GUI` nên ta phải cài thêm `browser c
   $ lynx google.com  #test thử  lynx
   ```
   
-  ![Screen Shot 2021-05-25 at 10.44.24.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-11-45-17-Screen%20Shot%202021-05-25%20at%2010.44.24.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-11-45-17-Screen%20Shot%202021-05-25%20at%2010.44.24.png">
   
-  ![Screen Shot 2021-05-25 at 11.45.52.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-11-46-00-Screen%20Shot%202021-05-25%20at%2011.45.52.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-11-46-00-Screen%20Shot%202021-05-25%20at%2011.45.52.png">
 
 - **B2** : Cài đặt và chạy `Apache` 
   
@@ -536,11 +536,11 @@ Vì sử dụng `CentOS` bản không `GUI` nên ta phải cài thêm `browser c
   $ systemctl status httpd #check httpd
   ```
   
-  ![Screen Shot 2021-05-25 at 11.47.23.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-11-47-47-Screen%20Shot%202021-05-25%20at%2011.47.23.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-11-47-47-Screen%20Shot%202021-05-25%20at%2011.47.23.png">
 
 - **B3** : Gõ lệnh `lynx 10.0.2.2` để truy cập vào `Apache` 
   
-  ![Screen Shot 2021-05-25 at 11.48.41.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-11-48-46-Screen%20Shot%202021-05-25%20at%2011.48.41.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-11-48-46-Screen%20Shot%202021-05-25%20at%2011.48.41.png">
 
 ==> Vậy là thành công
 
@@ -554,17 +554,17 @@ Vì sử dụng `CentOS` bản không `GUI` nên ta phải cài thêm `browser c
   $ nano /var/www/html/tamquoc/index.html
   ```
   
-  ![Screen Shot 2021-05-25 at 13.12.25.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-13-20-30-Screen%20Shot%202021-05-25%20at%2013.12.25.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-13-20-30-Screen%20Shot%202021-05-25%20at%2013.12.25.png">
   
   ```bash
   $ nano /var/www/html/tamquoc/style.css
   ```
   
-  ![Screen Shot 2021-05-25 at 13.12.39.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-13-21-17-Screen%20Shot%202021-05-25%20at%2013.12.39.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-13-21-17-Screen%20Shot%202021-05-25%20at%2013.12.39.png">
 
 - **B3**: Gõ `lynx 10.0.2.2/tamquoc` : 
   
-  ![Screen Shot 2021-05-25 at 13.12.10.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-13-22-16-Screen%20Shot%202021-05-25%20at%2013.12.10.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-13-22-16-Screen%20Shot%202021-05-25%20at%2013.12.10.png">
 
 ==> Đã thành công 
 
@@ -577,33 +577,29 @@ Vì sử dụng `CentOS` bản không `GUI` nên ta phải cài thêm `browser c
   $ systemctl status iptables
   ```
   
-  ![Screen Shot 2021-05-25 at 15.06.06.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-15-06-33-Screen%20Shot%202021-05-25%20at%2015.06.06.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-15-06-33-Screen%20Shot%202021-05-25%20at%2015.06.06.png">
   
-  ![Screen Shot 2021-05-25 at 15.06.59.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-15-07-26-Screen%20Shot%202021-05-25%20at%2015.06.59.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-15-07-26-Screen%20Shot%202021-05-25%20at%2015.06.59.png">
 
 - **B2**: Gõ `ping -c 5 www.lautamquoc.com` để kiểm tra
   
-  ![Screen Shot 2021-05-25 at 15.08.47.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-15-09-11-Screen%20Shot%202021-05-25%20at%2015.08.47.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-15-09-11-Screen%20Shot%202021-05-25%20at%2015.08.47.png">
 
 - **B3**: Gõ `lynx www.lautamquoc.com/tamquoc` để truy cập tới `web` : 
   
-  ![Screen Shot 2021-05-25 at 15.11.40.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-15-13-46-Screen%20Shot%202021-05-25%20at%2015.11.40.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-15-13-46-Screen%20Shot%202021-05-25%20at%2015.11.40.png">
   
-  ![Screen Shot 2021-05-25 at 15.09.53.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-15-13-53-Screen%20Shot%202021-05-25%20at%2015.09.53.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-15-13-53-Screen%20Shot%202021-05-25%20at%2015.09.53.pn">
   
   ==> Đã thành công
 
----
+## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/08-22-03-47-icons8-questions.png"> Câu 1.9: Sử dụng dịch vụ `FTP`
 
-## ![icons8questionspng](https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/08-22-03-47-icons8-questions.png) **Câu 1.9** `
-
-### Cấu hình máy chỉ `FTP`
-
-#### 1. Cài đặt `FTP` trên `CentOS`
+### 1. Cài đặt `FTP` trên `CentOS`
 
 - **B1** : Gõ lệnh `yum install vsftpd` 
   
-  ![Screen Shot 2021-05-25 at 15.16.41.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-15-18-07-Screen%20Shot%202021-05-25%20at%2015.16.41.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-15-18-07-Screen%20Shot%202021-05-25%20at%2015.16.41.png">
 
 - **B2** : Gõ lần lượt các lệnh sau : 
   
@@ -612,7 +608,7 @@ Vì sử dụng `CentOS` bản không `GUI` nên ta phải cài thêm `browser c
   $ systemctl status vsftpd # kiểm tra ftp
   ```
   
-  ![Screen Shot 2021-05-25 at 15.19.12.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-15-19-32-Screen%20Shot%202021-05-25%20at%2015.19.12.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-15-19-32-Screen%20Shot%202021-05-25%20at%2015.19.12.png">
 
 - **B3**: Thực hiện các lệnh để cho phép cổng `21` trên `firewall`
   
@@ -624,9 +620,9 @@ Vì sử dụng `CentOS` bản không `GUI` nên ta phải cài thêm `browser c
   $ 
   ```
   
-  ![Screen Shot 2021-05-25 at 15.23.26.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-15-23-53-Screen%20Shot%202021-05-25%20at%2015.23.26.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-15-23-53-Screen%20Shot%202021-05-25%20at%2015.23.26.png">
 
-#### 2. Cấu hình `FTP`
+### 2. Cấu hình `FTP`
 
 - **B1** : Thực hiện lần lượt các lệnh sau : 
   
@@ -661,15 +657,11 @@ Vì sử dụng `CentOS` bản không `GUI` nên ta phải cài thêm `browser c
 
 - **B2**: Gõ lệnh `ftp 10.0.2.2` để kết nối và kiểm tra :
   
-  ![Screen Shot 2021-05-25 at 17.10.39.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-17-11-01-Screen%20Shot%202021-05-25%20at%2017.10.39.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-17-11-01-Screen%20Shot%202021-05-25%20at%2017.10.39.png">
 
----
+## <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/08-22-03-47-icons8-questions.png"> Câu 1.10: Cấu hình file `Backup`
 
-## ![icons8questionspng](https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/08-22-03-47-icons8-questions.png) **Câu 1.10**
-
-### Cấu hình file backup
-
-- **B1**: Thời hiện các lệnh sau : 
+- **B1**: Thực hiện các lệnh sau : 
   
   ```bash
   $ mkdir /mnt/backup #tạo mục backup
@@ -678,11 +670,11 @@ Vì sử dụng `CentOS` bản không `GUI` nên ta phải cài thêm `browser c
   $ nano /tmp/backupeverymonth.sh #tạo mục backup hằng tháng
   ```
   
-  ![Screen Shot 2021-05-25 at 21.10.14.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-21-49-53-Screen%20Shot%202021-05-25%20at%2021.10.14.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-21-49-53-Screen%20Shot%202021-05-25%20at%2021.10.14.png">
   
-  ![Screen Shot 2021-05-25 at 21.17.00.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-21-49-57-Screen%20Shot%202021-05-25%20at%2021.17.00.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-21-49-57-Screen%20Shot%202021-05-25%20at%2021.17.00.png">
   
-  ![Screen Shot 2021-05-25 at 21.37.08.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-21-55-46-Screen%20Shot%202021-05-25%20at%2021.37.08.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-21-55-46-Screen%20Shot%202021-05-25%20at%2021.37.08.png">
 
 - **B2**: Test nhẹ 3 file `backup`
   
@@ -694,7 +686,7 @@ Vì sử dụng `CentOS` bản không `GUI` nên ta phải cài thêm `browser c
   
   >  Đây là kết quả sau khi thực thi 
   
-  ![Screen Shot 2021-05-25 at 21.53.37.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-21-53-59-Screen%20Shot%202021-05-25%20at%2021.53.37.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-21-53-59-Screen%20Shot%202021-05-25%20at%2021.53.37.png">
 
 - **B3**: Cấu hình `Crontab`, gõ lệnh như sau : 
   
@@ -703,6 +695,8 @@ Vì sử dụng `CentOS` bản không `GUI` nên ta phải cài thêm `browser c
   $ crontab -e
   ```
   
-  ![Screen Shot 2021-05-25 at 21.55.08.png](https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-21-57-26-Screen%20Shot%202021-05-25%20at%2021.55.08.png)
+  <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/25-21-57-26-Screen%20Shot%202021-05-25%20at%2021.55.08.png">
 
 ==> Như thế là xong đợi ngày lành tháng tốt rồi nó chạy  !!!
+
+<comment/>
