--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/4.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/4.md
@@ -1,8 +1,10 @@
 # Thực hành buổi 4
 
-::: tip 📁 TÀI NGUYÊN
+::: tip 📝 ĐỀ BÀI
 
-[Download tài liệu buổi 4](https://drive.google.com/file/d/1yC_AMzdyaNDbFktZ4c_-FTfnK1b0Bt1z/preview)
+<div class="pdfZen">
+  <iframe src="https://drive.google.com/file/d/1yC_AMzdyaNDbFktZ4c_-FTfnK1b0Bt1z/preview"></iframe>
+</div>
 :::
 
 ## Kiến thức
