--- a/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/6.md
+++ b/docs/cosonganh/CT112-Mang_may_tinh/Thuchanh/6.md
@@ -1,8 +1,10 @@
 # Thực hành buổi 6
 
-::: tip 📁 TÀI NGUYÊN
+::: tip 📝 ĐỀ BÀI
 
-[Download tài liệu buổi 6](https://drive.google.com/file/d/1BV38gOxrVap-NMhQ8NqNnGyiGYje4cYI/preview)
+<div class="pdfZen">
+  <iframe src="https://drive.google.com/file/d/1BV38gOxrVap-NMhQ8NqNnGyiGYje4cYI/preview"></iframe>
+</div>
 :::
 
 
