--- a/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/1.md
+++ b/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/1.md
@@ -1,8 +1,10 @@
 # <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/03/07-22-33-54-EXPERT%20SYSTEM.png" title="" alt="EXPERT SYSTEM.png" width="50"> Buổi 1 - Quản trị hệ thống
 
-::: tip 📁 TÀI NGUYÊN
+::: tip 📝 ĐỀ BÀI
 
-[Download file buổi 1](https://drive.google.com/file/d/1Ba8S2JEzz7ZnBrMKUoSefgqab5DiSNhP/preview)
+<div class="pdfZen">
+  <iframe src="https://drive.google.com/file/d/1Ba8S2JEzz7ZnBrMKUoSefgqab5DiSNhP/preview"></iframe>
+</div>
 :::
 
 ## 1. Sử dụng Linux
