--- a/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/4.md
+++ b/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/4.md
@@ -1,8 +1,10 @@
 # <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/26-12-06-18-NETWORK.png"> Buổi 4 - Cấu hình mạng và cài đặt `SSH`,`FTP`,`Web Server`
 
-::: tip 📁 TÀI NGUYÊN
+::: tip 📝 ĐỀ BÀI
 
-[Download file buổi 4](https://drive.google.com/file/d/1Jkro8ZLSjCcYqEGPtAXjjgEygxOOF92R/preview)
+<div class="pdfZen">
+  <iframe src="https://drive.google.com/file/d/1Jkro8ZLSjCcYqEGPtAXjjgEygxOOF92R/preview"></iframe>
+</div>
 :::
 
 ## 1. Cài đặt CentOS
