--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/4.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/4.md
@@ -1,4 +1,4 @@
-# Bài thực hành <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/10/08-14-42-19-icons8-4_cute.png" width="45">
+# Bài thực hành 4
 
 ## Xếp hạng đồ thị
 
