--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/6.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/6.md
@@ -93,10 +93,7 @@ int received(Graph G,int x){
 }
 ```
 
-
-### Lời giải
-
-
+### <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/02-22-18-48-tenor.gif" width="40"> [Lời giải](https://replit.com/@Zenfection/cau1LTDT)
 
 ## Câu 2
 
@@ -125,9 +122,20 @@ int received(Graph G,int x){
 
 ### Phân tích
 
-### Hàm cần dùng
+::: tip 💡 MẸO
 
-### Lời giải
+Nhìn sơ qua không khác gì bài 1, chúng ta hoàn toàn có thể sử dụng lại:
+
+Ví dụ mô hình `3` và `4`:
+
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/23-10-29-39-Screen%20Shot%202021-11-23%20at%2010.29.32.png">
+
+> ở nút số 2 có 1 phụ thuộc ==> `2:1`
+>
+> ở nút số 5 có 3 phụ thuộc ==> `5:3`
+:::
+
+### <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/02-22-18-48-tenor.gif" width="40"> [Lời giải](https://replit.com/@Zenfection/cau2LTDT)
 
 ## Câu 3
 
@@ -163,9 +171,25 @@ int received(Graph G,int x){
 
 ### Phân tích
 
+Đầu tiên chúng ta cần xác định bằng cách lấy một ví dụ không quá dễ cũng không quá khó để vẽ ra một mô hình:
+
+> Mình sẽ lấy ví dụ `1`:
+>
+> <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/23-10-59-58-Screen%20Shot%202021-11-23%20at%2010.59.29.png" width="300">
+>
+> ==> Nhìn sơ ta cũng biến đáp án là:
+>
+> | Chuồng A    | Chuồng B |
+> | ----------- | -------- |
+> | 1<br>2<br>5 | 3<br>4   |
+
+
+Vậy thì mình thử sử dụng `BFS` để duyệt tuần tự: 
+
+
 ### Hàm cần dùng
 
-### Lời giải
+### <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/02-22-18-48-tenor.gif" width="40"> [Lời giải](https://replit.com/@Zenfection/cau3LTDT)
 
 ## Câu 4
 
