--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/6.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/6.md
@@ -8,37 +8,35 @@
 >
 > Hãy tìm người đã nhận nhiều email nhất.
 >
-> ::: tip 💡 GIẢI THÍCH
->
-> Cho ví dụ sau:
-> 
-> ```txt:no-line-numbers
-> 3
-> 0 1 0
-> 1 0 1 
-> 1 2 0
-> ```
-> **Đầu vào**: 
->
-> Có nghĩa là có `3` sinh viên.
-> 
-> - `0 1 0`: **SV1** gửi cho **SV2** `1` email
-> 
-> - `1 0 1`: **SV2** gửi cho **SV1**, **SV3** `1` email
-> 
-> - `1 2 0`: **SV3** gửi 1 `email` cho **SV1** và gửi `2` email cho **SV2**  
-> 
-> **Đầu ra**:
-> 
-> In ra màn hình người đã nhận nhiều email nhất dạng sau: `x has received y email(s).` 
->
-> | Input                                                                                                      | Result                     |
-> | ---------------------------------------------------------------------------------------------------------- | -------------------------- |
-> | 3<br>0 1 0<br>1 0 1<br>1 2 0                                                                               | 2 has received 3 email(s). |
-> | 7<br>0 0 0 0 0 1 1<br>0 0 1 0 0 0 0<br>0 0 0 0 0 0 0<br>0 0 1 0 0 0 0 <br>0 0 0 0 0 0 1<br>0 0 0 0 0 0 0<br>0 0 0 0 0 0 0 | 3 has received 2 email(s)  |
-> | 4<br>0 2 0 0<br>0 0 1 1<br>1 1 0 0<br>1 0 0 0                                                              | 2 has received 3 email(s)  |
-> 
-> :::
+::: tip 💡 GIẢI THÍCH
+Cho ví dụ sau:
+
+```txt:no-line-numbers
+3
+0 1 0
+1 0 1 
+1 2 0
+```
+**Đầu vào**: 
+Có nghĩa là có `3` sinh viên.
+
+- `0 1 0`: **SV1** gửi cho **SV2** `1` email
+
+- `1 0 1`: **SV2** gửi cho **SV1**, **SV3** `1` email
+
+- `1 2 0`: **SV3** gửi 1 `email` cho **SV1** và gửi `2` email cho **SV2**  
+
+**Đầu ra**:
+
+In ra màn hình người đã nhận nhiều email nhất dạng sau: `x has received y email(s).` 
+
+| Input                                                                                                      | Result                     |
+| ---------------------------------------------------------------------------------------------------------- | -------------------------- |
+| 3<br>0 1 0<br>1 0 1<br>1 2 0                                                                               | 2 has received 3 email(s). |
+| 7<br>0 0 0 0 0 1 1<br>0 0 1 0 0 0 0<br>0 0 0 0 0 0 0<br>0 0 1 0 0 0 0 <br>0 0 0 0 0 0 1<br>0 0 0 0 0 0 0<br>0 0 0 0 0 0 0 | 3 has received 2 email(s)  |
+| 4<br>0 2 0 0<br>0 0 1 1<br>1 1 0 0<br>1 0 0 0                                                              | 2 has received 3 email(s)  |
+
+:::
 
 ### Phân tích
 
@@ -101,24 +99,24 @@ int received(Graph G,int x){
 > 
 > Hãy viết chương trình in ra màn hình số lượng công việc phụ thuộc của một công việc `x` nào đó.
 > 
-> ::: tip 💡 GIẢI THÍCH
-> 
-> **Đầu vào:**
-> 
->   1. Dòng đầu tiên chứa 2 số, tương ứng với số lượng công việc và số lượng mối quan hệ giữa các công việc
-> 
->   2. Các dòng tiếp theo, mỗi dùng chứa `u`, `v` nói rằng: công việc `v` phụ thuộc công việc `u`
-> 
->   3. Dòng cuối sẽ chứa công việc `x` cần tìm số công việc phụ thuộc
-> 
-> | Input                                                     | Result |
-> | --------------------------------------------------------- | ------ |
-> | 3 2<br>1 2<br>2 3<br>2                                    | 2:1    |
-> | 3 2<br>1 2<br>2 3<br>1                                    | 1:0    |
-> | 5 7<br>1 4<br>1 2<br>1 3<br>1 5<br>2 3<br>3 5<br>4 5<br>2 | 2:1    |
-> | 5 7<br>1 4<br>1 2<br>1 3<br>1 5<br>2 3<br>3 5<br>4 5<br>5 | 5:3    |
-> 
-> :::
+::: tip 💡 GIẢI THÍCH
+
+**Đầu vào:**
+
+  1. Dòng đầu tiên chứa 2 số, tương ứng với số lượng công việc và số lượng mối quan hệ giữa các công việc
+
+  2. Các dòng tiếp theo, mỗi dùng chứa `u`, `v` nói rằng: công việc `v` phụ thuộc công việc `u`
+
+  3. Dòng cuối sẽ chứa công việc `x` cần tìm số công việc phụ thuộc
+
+| Input                                                     | Result |
+| --------------------------------------------------------- | ------ |
+| 3 2<br>1 2<br>2 3<br>2                                    | 2:1    |
+| 3 2<br>1 2<br>2 3<br>1                                    | 1:0    |
+| 5 7<br>1 4<br>1 2<br>1 3<br>1 5<br>2 3<br>3 5<br>4 5<br>2 | 2:1    |
+| 5 7<br>1 4<br>1 2<br>1 3<br>1 5<br>2 3<br>3 5<br>4 5<br>5 | 5:3    |
+
+:::
 
 ### Phân tích
 
@@ -143,31 +141,31 @@ Ví dụ mô hình `3` và `4`:
 > 
 > Hãy viết chương trình xem có thể phân chia các con gà vào 2 chuồng gà không, và mỗi chuồng gà có bao nhiêu con.
 > 
-> ::: tip 💡 GIẢI THÍCH
-> 
-> **Đầu vào**: 
-> 
->   1. Dòng đầu tiên chứa 2 số tương ứng với `số con gà` và `cặp gà không thích nhau`
-> 
->   2. Các dòng tiếp theo, mỗi dòng chứa gà `a` và `b` sẽ cắn nhau theo chung một chuồng
-> 
-> **Đầu ra**:
-> 
->   1. `x` là số con gà trong chuồng `A`
-> 
->   2. `y` là số con gà trong chuồng `B`
-> 
-> | Input                                  | Result |
-> | -------------------------------------- | ------ |
-> | 5 5<br>1 3<br>2 3<br>2 4<br>3 5<br>4 5 | 3 2    |
-> | 5 4<br>1 4<br>5 2<br>3 2<br>1 2        | 3 2    |
-> | 3 3<br>1 2<br>2 3<br>3 1               | -1 -1  |
-> :::
-> 
-> ::: warning ⚠️ LƯU Ý
-> 
-> Nếu không thể phân chia thì in ra `-1 -1`
-> :::
+::: tip 💡 GIẢI THÍCH
+
+**Đầu vào**: 
+
+  1. Dòng đầu tiên chứa 2 số tương ứng với `số con gà` và `cặp gà không thích nhau`
+
+  2. Các dòng tiếp theo, mỗi dòng chứa gà `a` và `b` sẽ cắn nhau theo chung một chuồng
+
+**Đầu ra**:
+
+  1. `x` là số con gà trong chuồng `A`
+
+  2. `y` là số con gà trong chuồng `B`
+
+| Input                                  | Result |
+| -------------------------------------- | ------ |
+| 5 5<br>1 3<br>2 3<br>2 4<br>3 5<br>4 5 | 3 2    |
+| 5 4<br>1 4<br>5 2<br>3 2<br>1 2        | 3 2    |
+| 3 3<br>1 2<br>2 3<br>3 1               | -1 -1  |
+:::
+
+::: warning ⚠️ LƯU Ý
+
+Nếu không thể phân chia thì in ra `-1 -1`
+:::
 
 ### Phân tích
 
@@ -184,10 +182,26 @@ Ví dụ mô hình `3` và `4`:
 > | 1<br>2<br>5 | 3<br>4   |
 
 
-Vậy thì mình thử sử dụng `BFS` để duyệt tuần tự: 
 
+::: tip 💡 MẸO
+Vậy thì mình thử sử dụng `BFS` để duyệt tuần tự: `1 3 2 5 4`
 
-### Hàm cần dùng
+- **B1:** Tạo ra 2 danh sách `A` và `B`
+
+- **B2:** bỏ số 1 vào danh sách `A`
+
+- **B3:** Duyệt từ số tiếp theo tới cuối
+
+- **B4:** Ví dụ là `3`, sẽ kiểm tra các đỉnh kề của `3` có nằm trong danh sách `A` không ?
+
+    1. Nếu vừa có trong `A` và `B` thì in ra `-1 -1` và **kết thúc**
+
+    2. Nếu có trong danh sách `A` thì hãy thêm vào danh sách `B`
+
+    3. nếu không có trong danh sách `A` thì hãy thêm vào danh sách `A`
+
+- **B5:** Số phần tử trong 2 danh sách `A` và `B` là **kết quả**
+:::
 
 ### <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/02-22-18-48-tenor.gif" width="40"> [Lời giải](https://replit.com/@Zenfection/cau3LTDT)
 
@@ -203,50 +217,107 @@ Vậy thì mình thử sử dụng `BFS` để duyệt tuần tự:
 > :::
 > 
 > Hãy viết chương trình, kiểm tra trong quá trình vận chuyển hàng hóa từ nhà kho đến cửa hàng bán lẻ,các tài xế có làm đánh mất hàng hóa hay không ? 
-> 
-> ::: tip 💡 GIẢI THÍCH
-> 
-> Dễ hiểu ta sẽ đánh số như sau:
-> 
-> - Nhà kho chính : `s = 1`
-> 
-> - Cửa hàng bán lẻ: `t = n`
-> 
-> - `n - 2` nhà kho còn lại được đánh số lần lượt là `2,3...,n-1`
-> 
-> **Đầu vào**:
-> 
->   1. Dòng đầu tiên chứa `số địa điểm` và `số con đường từ điểm này tới điểm kia`
-> 
->   2. Các dòng tiếp theo chứa 4 số `u`,`v`,`c`,`f` rằng : Đoạn đường từ nhà kho `u` tới `v`, cho phép `c` tấn và `f` là số tấn thực tế trên xe tải
-> 
-> **Đầu ra**:
-> 
->   In ra màn hình :
-> 
->   1. `TOT`: nếu vận chuyển không mất hàng
-> 
->   2. `MAT HANG`: nếu tổng hàng hóa đến kho `u` không bằng lúc vận chuyển
-> 
-> | Input                                                                                                                                  | Result   |
-> | -------------------------------------------------------------------------------------------------------------------------------------- | -------- |
-> | 6 8<br>1 2 12 10<br>1 4 10 8<br>2 3 10 6<br>2 5 4 4<br>3 4 8 1<br>4 5 12 9<br>3 6 5 5<br>5 6 18 13                                     | TOT      |
-> | 6 8<br>1 2 12 10<br>1 4 10 8<br>2 3 10 6<br>2 5 4 4<br>3 4 8 1<br>4 5 12 5<br>3 6 5 0<br>5 6 18 9                                      | MAT HANG |
-> | 7 12<br>1 2 10 10<br>4 2 10 0<br>4 6 7 1<br>4 5 10 4<br>2 3 10 2<br>2 6 7 6<br>6 3 7 0<br>6 5 7 7<br>3 5 10 0<br>3 7 10 2<br>5 7 15 11 | MAT HANG |
-> 
-> :::
+
+::: tip 💡 GIẢI THÍCH
+
+Dễ hiểu ta sẽ đánh số như sau:
+
+- Nhà kho chính : `s = 1`
+
+- Cửa hàng bán lẻ: `t = n`
+
+- `n - 2` nhà kho còn lại được đánh số lần lượt là `2,3...,n-1`
+
+**Đầu vào**:
+
+  1. Dòng đầu tiên chứa `số địa điểm` và `số con đường từ điểm này tới điểm kia`
+
+  2. Các dòng tiếp theo chứa 4 số `u`,`v`,`c`,`f` rằng : Đoạn đường từ nhà kho `u` tới `v`, cho phép `c` tấn và `f` là số tấn thực tế trên xe tải
+
+**Đầu ra**:
+
+  In ra màn hình :
+
+  1. `TOT`: nếu vận chuyển không mất hàng
+
+  2. `MAT HANG`: nếu tổng hàng hóa đến kho `u` không bằng lúc vận chuyển
+
+| Input                                                                                                                                  | Result   |
+| -------------------------------------------------------------------------------------------------------------------------------------- | -------- |
+| 6 8<br>1 2 12 10<br>1 4 10 8<br>2 3 10 6<br>2 5 4 4<br>3 4 8 1<br>4 5 12 9<br>3 6 5 5<br>5 6 18 13                                     | TOT      |
+| 6 8<br>1 2 12 10<br>1 4 10 8<br>2 3 10 6<br>2 5 4 4<br>3 4 8 1<br>4 5 12 5<br>3 6 5 0<br>5 6 18 9                                      | MAT HANG |
+| 7 12<br>1 2 10 10<br>4 2 10 0<br>4 6 7 1<br>4 5 10 4<br>2 3 10 2<br>2 6 7 6<br>6 3 7 0<br>6 5 7 7<br>3 5 10 0<br>3 7 10 2<br>5 7 15 11 | MAT HANG |
+
+:::
 
 ### Phân tích
 
+Hãy lấy mô hình số `2` là mô hình bị mất hàng để phân tích :
+
+| Cho phép                                                                                                                                                                | Thực tế                                                                                                                                                                 |
+| ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/24-14-14-08-Screen%20Shot%202021-11-24%20at%2014.14.00.png"> | <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/24-14-13-43-Screen%20Shot%202021-11-24%20at%2014.13.29.png"> |
+
+
+Nhìn sang bảng thực tế và phân tích các đường đi từ `1` tới `6`:
+
+1. Nhánh `1-2-3-6`: 
+
+2. Nhánh `1-2-5-6`:
+
+3. Nhánh `1-4-5-6`:
 ### Hàm cần dùng
 
-### Lời giải
+### <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/02-22-18-48-tenor.gif" width="40"> [Lời giải](https://replit.com/@Zenfection/cau4LTDT)
 
 ## Câu 5
 
-John là lập trình viên sống tại San Francisco. Hiện tại trong nhóm phát triển phần mềm với 2 công ty. Công ty `A` thì đặt 
+> John là lập trình viên sống tại San Francisco. Hiện tại trong nhóm phát triển phần mềm với 2 công ty `A` và `B`. Vì lý do đặc biệt nên hàng tháng `John` phải đi qua lại công ty `A` và `B`.
+> 
+> Biết rằng tại nơi `John` sống có thể đi đến công ty `A` và `B` thông qua hệ thống các chuyến bay như sau:
+> 
+> | STT | Chuyến bay                    | Giá vé |
+> | --- | ----------------------------- | ------ |
+> | 1   | San Francisco <=> Detroit     | $329   |
+> | 2   | San Francisco <=> New York    | $359   |
+> | 3   | San Francisco <=> Denver      | $279   |
+> | 4   | San Francisco <=> Los Angeles | $69    |
+> | 5   | Denver <=> Los Angeles        | $209   |
+> | 6   | Denver <=> Detroit            | $129   |
+> | 7   | Denver <=> New York           | $279   |
+> | 8   | Los Angeles <=> New York      | $379   |
+> | 9   | Los Angeles <=> Detroit       | $349   |
+> | 10  | Detroit <=> New York          | $89    |
+> 
+> 
+> Ví dụ vé số `1` là từ San `Francisco` tới `Detroit`  và `Detroit` tới `Francisco` đề có giá vé là `$329`
+> 
+> Để đơn giản ta sẽ đánh các thành phố theo số sau:
+> 
+> | San Francisco | Detroit | New York | Los Angeles | Denver |
+> | ------------- | ------- | -------- | ----------- | ------ |
+> | 1             | 2       | 3        | 4           | 5      |
+> 
+> Thông thường thì chuyến bay của `John` sẽ đến gặp công ty `A` và `B` diễn ra trong `3` ngày:
+> 
+> - Ngày `1`: Đi từ nhà (*San Francisco*) tới công ty `A` (*Denver*)
+> 
+> - Ngày `2`: Đi từ công ty `A` (*Denver*) tới công ty `B` (*New York*)
+> 
+> - Ngày `3`: Đi từ công ty `B` (*New York*) về nhà (*San Francisco*)
+> 
+> Viết chương trình giúp `John` chọn chuyến bay sau cho chi phí phải trả là thấp nhất
 
 ::: tip 💡 GIẢI THÍCH
+
+**Đầu vào**: 
+
+- Dòng đầu tiên chứa `số thành phố` và `số chuyến bay giữa 2 thành phố`
+
+- Các Dòng tiếp theo chứa 3 số `u`,`v`,`w`: chuyến bay từ `u` tới `v` có giá `w`
+
+- Dòng cuối chứa `x` và `y` là hai thành phố và `John` muốn tìm đường đi công tác với số tiền thấp nhất
+
 
 | Input                                                                                                                   | Result       |
 | ----------------------------------------------------------------------------------------------------------------------- | ------------ |
@@ -256,15 +327,46 @@ John là lập trình viên sống tại San Francisco. Hiện tại trong nhóm
 
 ### Phân tích
 
-### Hàm cần dùng
+Từ ví dụ trên ta sẽ có mô hình như sau:
 
-### Lời giải
+<img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/11/24-16-36-39-Screen%20Shot%202021-11-24%20at%2016.36.21.png">
+
+Từ đây chúng ta có thể nhìn đơn giản rằng :
+
+- Con đường đi từ `1` tới `5` là : `1-4-5` và có giá trị là `278`
+
+- Con đường đi từ `5` tới `3` là : `5-2-3` và có giá trị là `218`
+
+::: tip 💡 MẸO
+
+Sử dụng giải thuật [Dijstra](/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/3.html#thuat-toan-dijkstra) để tìm ra đường đi ngắn nhất
+:::
+
+### <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/02-22-18-48-tenor.gif" width="40"> [Lời giải](https://replit.com/@Zenfection/cau5LTDT)
 
 ## Câu 6
 
+Một người nông dân trồng thanh long cần lắp đèn chiếu sáng vào ban đêm đã cắm `n` cọc lắp đèn chiếu sáng (*được đánh số từ `1` tới `n`*) và bác đã kéo dây điện từ nhà của bác tới cọc số `1`. 
 
+Trên mỗi cọc này, từ một bóng đèn sẽ nối dây điện cho tất cả bóng đèn ở những cọc còn lại. Nếu một cọc được cấp điện thì tất cả các cọc khác nối với nó cũng được cấp điện, các điểm nối phải nằm trên cọc nào đó (*không nằm ở lưng chừng giữa 2 cọc*).
+
+Bác nông dân đã thấy có `m` cặp cọc có thể được nối với nhau và đã ghi lại chiều dài dây điện cần thiết để nối (*mỗi dây kết nối có giá tiền khác nhau*).
+
+Hãy viết chương trình giúp nông dân tính số tiền tối thiểu cần để mua dậy điện thắp sáng mảnh vườn thanh long.
 
 ::: tip 💡 GIẢI THÍCH
+
+**Đầu vào**:
+
+- Dòng đầu tiên chứa `số cọc lắp đèn` và `số cặp cọc có thể nối với nhau bằng dây điện`
+
+- Các dòng tiếp theo mỗi dòng sẽ chứa 4 số `u`, `v`, `x`, `y` nói rằng : cọc `u` với cọc `v`, cần mua `x` mét dây mỗi mét có giá `y` nghìn VND/m
+
+**Đầu ra**:
+
+- In ra màn hình số tiền thấp nhất để mua đèn thắp sáng cả vườn thanh long
+
+> ⚠️ Nếu bài toán không có lời giải hãy in ra: "KHONG CO LOI GIAI"
 
 | Input                                                                                                                | Result            |
 | -------------------------------------------------------------------------------------------------------------------- | ----------------- |
@@ -275,6 +377,4 @@ John là lập trình viên sống tại San Francisco. Hiện tại trong nhóm
 
 ### Phân tích
 
-### Hàm cần dùng
-
-### Lời giải
+### <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/08/02-22-18-48-tenor.gif" width="40"> [Lời giải](https://replit.com/@Zenfection/cau6LTDT)
