--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/1.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/1.md
@@ -50,13 +50,13 @@ void makeNullGraph(Graph *G){ //khởi tạo đồ thị rỗng
     G->n = 0;
 }
 
-void init_Graph(Graph *G, int n){ //khởi tạo đồ thị với n đỉnh
+void initGraph(Graph *G, int n){ //khởi tạo đồ thị với n đỉnh
     for (int i = 1; i <= n; i++)
         for (int j = 1; j <= n; j++)
             G->A[i][j] = 0;
 }
 
-void add_edge(Graph *G, int x, int y){ //thêm 1 cung vào đồ thị
+void addEdge(Graph *G, int x, int y){ //thêm 1 cung vào đồ thị
     if(G->A[x][y] > 0 && G->A[x][y] > 0) //trường hợp đa cung
         G->A[x][y] = G->A[y][x] += 1;
     else
@@ -64,7 +64,7 @@ void add_edge(Graph *G, int x, int y){ //thêm 1 cung vào đồ thị
 }
 
 // thêm 1 cung cho đồ thị có hướng
-void add_edgeDirection(Graph *G, int x,int y){ 
+void addEdgeDirection(Graph *G, int x,int y){ 
     if(G->A[x][y] > 0){ //trường hợp đa cung
         G->A[x][y] += 1;
     }
