--- a/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/5.md
+++ b/docs/cosonganh/CT175-Ly_thuyet_do_thi/Thuchanh/5.md
@@ -2,13 +2,10 @@
 
 ## Giải thuật `Prim`
 
-> Sử dụng cho danh sách đỉnh đỉnh
+::: warning ⚠️ LƯU Ý
 
-::: tip 
-
-| Đầu vào                  | Đầu ra                      | Thay đổi   |
-| ------------------------ | --------------------------- | ---------- |
-| Đồ thị `G`<br>Đồ thị `T` | chi phí cây khung ngắn nhât | Đồ thị `T` |
+Sử dụng cho `danh sách đỉnh đỉnh`
+:::
 
 :::
 
@@ -61,10 +58,53 @@ int prim(Graph G, Graph *T){
     return sumW;
 }
 ```
-## Giải thuật ``
+## Giải thuật `Kruskal`
 
-> Sử dụng cho `danh sách cung`
+::: warning ⚠️ LƯU Ý
+
+Sử dụng cho `danh sách cung`
+:::
 
 ```c
+void swap(Edge *a, Edge *b){
+    Edge temp = *a;
+    *a = *b;
+    *b = temp;
+}
+void bubbleSort(Graph *G){
+    int n = G->m;
+    for(int i = 0; i < n - 1; i++){
+        for(int j = n - 1; j >= i + 1; j--){
+            if(G->edges[j].w < G->edges[j-1].w)
+                swap(&G->edges[j], &G->edges[j-1]);
+        }
+    }
+}
 
+int kruskal(Graph G, Graph *T){
+    int parent[MAX];
+    int sumW = 0;
+    
+    initGraph(T, G.n);
+    bubbleSort(&G);
+
+    for(int i = 1; i <= G.n; i++){
+        parent[i] = i;
+    }
+    
+    for(int e = 0; e < G.m; e++){
+        int u = G.edges[e].u;
+        int v = G.edges[e].v;
+        int w = G.edges[e].w;
+
+        int rootU = parrent[u];
+        int rootV = parrent[v];
+        if(rootU != rootV){
+            addEdge(T, u,v,w);
+            parent[rootV] = rootU;
+            sumW += w;
+        }
+    }
+    return sumW;
+}
 ```
